--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "deploy": "node ./node_modules/vue-gh-pages/index.js -p"
+    "deploy": "node ./node_modules/vue-gh-pages/index.js -p",
+    "reinstall": "rm package-lock.json && rm -r node_modules && npm install"
   },
   "dependencies": {
     "core-js": "^2.6.5",
