--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "reinstall": "rm package-lock.json && rm -r node_modules && npm install"
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^4.0.3",
     "core-js": "^3.6.5",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "nuxt": "^2.15.4",
+    "nuxt": "^2.15.8",
     "nuxt-i18n": "^6.15.4",
     "path": "^0.12.7",
     "postcss": "^8.2.10",
