--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "eaccess:fix": "cd script && net-restart.bat"
   },
   "dependencies": {
+    "@nuxtjs/composition-api": "^0.31.0",
     "@nuxtjs/tailwindcss": "^4.0.3",
+    "@vueuse/core": "^5.3.0",
+    "@vueuse/nuxt": "^7.5.5",
     "core-js": "^3.6.5",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-prettier": "^3.1.4",
