--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "core-js": "^3.6.5",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "locomotive-scroll": "^4.1.3",
     "nuxt": "^2.15.8",
     "nuxt-i18n": "^6.15.4",
     "particles.vue": "^2.21.0",
