--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prettier": "^2.1.2"
   },
   "devDependencies": {
-    "@nuxtjs/dotenv": "^1.4.1"
+    "@nuxtjs/dotenv": "^1.4.1",
+    "@nuxtjs/google-fonts": "^1.3.0"
   }
 }
